# docsgen

./: README.md  add_docstrings.py  docsgen.py  in_place.py  main.py  pyproject.toml  recurse.py  simple.py
archive/: README.md  docsgen.py  recurse.py  simple.py
examples/: test.py  test2.py
src/docgaps/: docsgen.py
