[project]
name = "docgaps"
version = "0.5.0"
description = "Find and generate missing docs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astor>=0.8.1",
    "logfire>=3.14.1",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.6",
    "pydantic-ai-slim[anthropic]>=0.1.6",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
exclude = ["./git", "./__pycache__", "./venv"]
typeCheckingMode = "standard"
reportAssignmentType = "warning"
reportOperatorIssue = "warning"
